src/objects/Sales_Role_History__c.object
<CustomObject>
    <description>Used this Object to trace the Sales role data changes</description>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <description>Identifies if the Role is IWA relevant (A&amp;S, N/A etc.,)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BG_Attribute__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BG Attribute</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Id__c</fullName>
        <description>This field will be used to identify the Org IDs to perform Insert/Update/Delete on Sales Roles table</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Hierarchy Short Description (Pack4)</inlineHelpText>
        <label>Hierarchy_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Role_Name__c</fullName>
        <description>Nokia New Role Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Role_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Role_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Role Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Role_Name__c</fullName>
        <description>Nokia Old role name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Role_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>User action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <description>Nokia Sales Organisation Identifier</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Code__c</fullName>
        <description>Nokia Role Code from CMD</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Owner_ID__c</fullName>
        <description>NSN ID of Role Owner
May 04 2017-Changed date type from Number to Text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Role</label>
        <referenceTo>Sales_Role__c</referenceTo>
        <relationshipLabel>Sales Role Histories</relationshipLabel>
        <relationshipName>Sales_Role_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>email address of role owner</description>
        <encryptionScheme>None</encryptionScheme>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Sales Role History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Operation_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>New_Role_Name__c</columns>
        <columns>Role_Code__c</columns>
        <columns>Old_User__c</columns>
        <columns>New_User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRH-{0000}</displayFormat>
        <label>Sales Role History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Role Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>